--- a/index.html
+++ b/index.html
@@ -8,8 +8,42 @@
     <title>WhenThen Technical | GabbyKC</title>
 </head>
 <body>
-<header>
+<header class="header wrapper flex-between-center">
+    <button id="navButton" class="header__nav-hamburger">
+        <svg viewBox="0 0 100 80" width="30" height="30">
+            <rect width="100" height="10"></rect>
+            <rect y="30" width="100" height="10"></rect>
+            <rect y="60" width="100" height="10"></rect>
+        </svg>
+    </button>
+    <a href="#">
+        <img src="public/images/logo.svg" alt="Brand Logo Name Goes Here">
+    </a>
+    <a href="#" class="header__join">Join beta</a>
+
+    <div id="navModal" class="header__modal">
+        <div class="header__modal__container">
+            <div class="header__modal__content wrapper">
+                <div class="flex-between-center">
+                    <span class="header__modal__close">&times;</span>
+                    <a href="#">
+                        <img src="public/images/logo_small.svg" alt="Brand Logo Name Goes Here">
+                    </a>
+                    <a href="#" class="header__join header__join--modal">Join beta</a>
+                </div>
+
+                <ul class="header__modal__list">
+                    <li><a href="#">For Companies</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <script src="public/javascript/index.js"></script>
 </header>
+
 
 </body>
 </html>
