add hero & first section (responsive)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
     <script src="public/javascript/index.js"></script>
 </header>
 
+<section class="hero-section">
+    <div class="wrapper flex-between-center">
+        <h1 class="headings-large">The future <br> of commerce</h1>
+        <h4 class="h4">
+            GoPlus is the only immersive automated commerce platform located in the highest footfall
+            locations in the world!
+        </h4>
+    </div>
+    <div class="wrapper" style="height:696px;background:black;margin-top:56px;margin-bottom: 375px"></div>
+</section>
+
+<section class="first-section">
+    <div class="wrapper flex-between-center">
+        <h2 class="headings-large">Immersive <br> experience</h2>
+        <h4 class="h4">
+            Integer purus amet, quam neque auctor enim cursus luctus non. Pretium nulla aliquet ornare placerat
+            consequat
+        </h4>
+    </div>
+</section>
+
 
 </body>
 </html>
