--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="shortcut icon" href="public/favicon.ico"/>
     <link rel="stylesheet" href="public/styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>WhenThen Technical | GabbyKC</title>
 </head>
 <body>
@@ -41,7 +42,6 @@
             </div>
         </div>
     </div>
-    <script src="public/javascript/index.js"></script>
 </header>
 
 <section class="hero-section">
@@ -52,7 +52,10 @@
             locations in the world!
         </h4>
     </div>
-    <div class="wrapper" style="height:696px;background:black;margin-top:56px;margin-bottom: 375px"></div>
+    <div id="heroImage" class="wrapper hero-section__image">
+        <button id="futureButton" class="hero-section__future-button">See the Future</button>
+    </div>
+    <div id="heroOverlay" class="hero-section__overlay animate__animated"></div>
 </section>
 
 <section class="first-section">
@@ -65,6 +68,6 @@
     </div>
 </section>
 
-
+<script src="public/javascript/index.js"></script>
 </body>
 </html>
