add image carousel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="public/favicon.ico"/>
     <link rel="stylesheet" href="public/styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick-theme.css"/>
     <title>WhenThen Technical | GabbyKC</title>
 </head>
 <body>
@@ -66,8 +68,17 @@
             consequat
         </h4>
     </div>
-</section>
 
+    <div class="first-section__carousel__container">
+        <div class="first-section__carousel">
+            <img src="public/images/carousel_image1.jpg" alt="Stock photo of machine one">
+            <img src="public/images/carousel_image1.jpg" alt="Stock photo of machine two">
+            <img src="public/images/carousel_image1.jpg" alt="Stock photo of machine three">
+        </div>
+    </div>
+</section>
+<script src="public/javascript/vendor/jquery.min.js"></script>
+<script src="public/javascript/vendor/slick-1.8.1/slick/slick.min.js"></script>
 <script src="public/javascript/index.js"></script>
 </body>
 </html>
