last section & footer

--- a/index.html
+++ b/index.html
@@ -77,6 +77,33 @@
         </div>
     </div>
 </section>
+
+<section class="second-section wrapper flex-between-center">
+    <div class="second-section__left">
+        <h4 class="h4">Smart capacity</h4>
+        <p class="custom-underline">Integer purus amet, quam neque auctor enim cursus luctus non. Pretium nulla aliquet
+            ornare placerat consequat
+            amet.</p>
+        <h4 class="h4">Seamless drop-off</h4>
+        <p class="custom-underline">Integer purus amet, quam neque auctor enim cursus luctus non. Pretium nulla aliquet
+            ornare placerat consequat
+            amet.</p>
+        <h4 class="h4">Autuomations</h4>
+        <p>Integer purus amet, quam neque auctor enim cursus luctus non. Pretium nulla aliquet ornare placerat consequat
+            amet.</p>
+    </div>
+
+    <div class="second-section__right">
+        <h2 class="headings-large">The future <br> of logistics</h2>
+        <h4 class="h4">Integer purus amet, quam neque auctor enim cursus luctus non. Pretium nulla aliquet ornare
+            placerat
+            consequat amet.</h4>
+    </div>
+</section>
+
+<footer>
+    <p>Made by <a href="https://www.linkedin.com/in/gabriellakate">GabbyKC</a></p>
+</footer>
 <script src="public/javascript/vendor/jquery.min.js"></script>
 <script src="public/javascript/vendor/slick-1.8.1/slick/slick.min.js"></script>
 <script src="public/javascript/index.js"></script>
