--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="shortcut icon" href="public/favicon.ico"/>
     <link rel="stylesheet" href="public/styles/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="public/styles/animate.min.css"/>
     <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick-theme.css"/>
     <title>WhenThen Technical | GabbyKC</title>
