--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="WhenThen Web Developer Technical Task">
     <link rel="shortcut icon" href="public/favicon.ico"/>
     <link rel="stylesheet" href="public/styles/index.css">
     <link rel="stylesheet" href="public/styles/animate.min.css"/>
@@ -12,7 +13,7 @@
 </head>
 <body>
 <header class="header wrapper flex-between-center">
-    <button id="navButton" class="header__nav-hamburger">
+    <button id="navButton" class="header__nav-hamburger" aria-label="Navigation">
         <svg viewBox="0 0 100 80" width="30" height="30">
             <rect width="100" height="10"></rect>
             <rect y="30" width="100" height="10"></rect>
@@ -28,7 +29,7 @@
         <div class="header__modal__container">
             <div class="header__modal__content wrapper">
                 <div class="flex-between-center">
-                    <span class="header__modal__close">&times;</span>
+                    <button class="header__modal__close" aria-label="Close Navigation">&times;</button>
                     <a href="#">
                         <img src="public/images/logo_small.svg" alt="Brand Logo Name Goes Here">
                     </a>
