minify files & update readme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="WhenThen Web Developer Technical Task">
     <link rel="shortcut icon" href="public/favicon.ico"/>
-    <link rel="stylesheet" href="public/styles/index.css">
+    <link rel="stylesheet" href="public/styles/index-min.css">
     <link rel="stylesheet" href="public/styles/animate.min.css"/>
     <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="public/javascript/vendor/slick-1.8.1/slick/slick-theme.css"/>
@@ -107,6 +107,6 @@
 </footer>
 <script src="public/javascript/vendor/jquery.min.js"></script>
 <script src="public/javascript/vendor/slick-1.8.1/slick/slick.min.js"></script>
-<script src="public/javascript/index.js"></script>
+<script src="public/javascript/index-min.js"></script>
 </body>
 </html>
